[project]
name = "end-to-end-ml"
version = "0.1.0"
description = """
An end-to-end ML project for tabular data that incorporates software engineering principles
in machine learning. It spans the whole lifecycle of a ML model, from data exploration,
preprocessing, feature engineering, model selection, training, evaluation, to deployment.
"""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "comet_ml==3.35.5",
  "dask==2023.12.1",
  "fastapi<0.100",
  "feast==0.34.1",
  "joblib==1.3.2",
  "lightgbm==4.3.0",
  "matplotlib==3.8.2",
  "kds==0.1.3",
  "numpy==1.24.4",
  "optuna==3.5.0",
  "optuna_distributed==0.6.1",
  "pandas==1.5.3",
  "polars==0.20.10",
  "pytest==7.4.4",
  "python-dotenv==1.0.1",
  "PyYAML==6.0.1",
  "scikit-learn==1.3.2",
  "scipy==1.11.4",
  "ucimlrepo==0.0.3",
  "xgboost==2.0.3"
]

[project.optional-dependencies]
dev = [
  "black[jupyter]",
  "pytest",
  "pylint",
  "isort",
  "pytest-cov",
  "pytest-mock",
  "pre-commit"
]

analysis = [
  "seaborn",
  "phik==0.12.3",
  "plotly",
  "ipython>=8.17.2"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
